Massive Frontend Overhaul: - Migrated to feature-driven architecture - Added React Query for request caching - Implemented unit and e2e testing - Full redesign of the project based on Bulletproof React - Included minor backend adjustments for compatibility