@@ -3,6 +3,7 @@ package org.bohdanzhuvak.nicoai.features.comments.service;
 import lombok.RequiredArgsConstructor;
 import org.bohdanzhuvak.nicoai.features.comments.CommentFactory;
 import org.bohdanzhuvak.nicoai.features.comments.CommentResponseMapper;
+import org.bohdanzhuvak.nicoai.features.comments.dto.CommentDto;
 import org.bohdanzhuvak.nicoai.features.comments.dto.CommentRequest;
 import org.bohdanzhuvak.nicoai.features.comments.dto.CommentResponse;
 import org.bohdanzhuvak.nicoai.features.comments.model.Comment;
@@ -13,11 +14,12 @@ import org.bohdanzhuvak.nicoai.features.users.model.User;
 import org.bohdanzhuvak.nicoai.shared.exception.CommentNotFoundException;
 import org.bohdanzhuvak.nicoai.shared.exception.ImageNotFoundException;
 import org.bohdanzhuvak.nicoai.shared.exception.UnauthorizedActionException;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -27,20 +29,26 @@ public class CommentService {
   private final CommentResponseMapper commentResponseMapper;
   private final CommentFactory commentFactory;
 
-  public List<CommentResponse> getComments(Long imageId) {
-    List<Comment> comments = commentRepository.findByImage_id(imageId, Sort.by(Sort.Direction.ASC, "createdAt"));
-    return comments.stream()
+  public CommentResponse getComments(Long imageId, Integer page) {
+    Page<Comment> commentPage = commentRepository.findByImageId(imageId, PageRequest.of(page - 1, 3, Sort.by("createdAt").descending()));
+
+    List<Comment> comments = commentPage.getContent();
+    long total = commentPage.getTotalElements();
+    int totalPages = commentPage.getTotalPages();
+
+    List<CommentDto> commentDtos = comments.stream()
         .map(commentResponseMapper::toCommentResponse)
-        .collect(Collectors.toList());
+        .toList();
+    CommentResponse.Meta meta = new CommentResponse.Meta(page, total, totalPages);
+    return new CommentResponse(commentDtos, meta);
   }
 
-  public CommentResponse postComment(CommentRequest commentRequest, User currentUser) {
+  public void postComment(CommentRequest commentRequest, User currentUser) {
     Long imageId = commentRequest.getImageId();
     Image image = imageRepository.findById(imageId)
         .orElseThrow(() -> new ImageNotFoundException("Image with ID " + imageId + " not found"));
     Comment comment = commentFactory.createComment(commentRequest, image, currentUser);
-    Comment savedComment = commentRepository.save(comment);
-    return commentResponseMapper.toCommentResponse(savedComment);
+    commentRepository.save(comment);
   }
 
   public void deleteComment(Long commentId, User currentUser) {
